cleaning print.